--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@
 .list-title{
     width: 345px;
   height: 88px;
-  margin: 43px 15px 38px;
+  margin: 43px 15px 15px;
   font-family: Montserrat;
   font-size: 35px;
   font-weight: bold;
@@ -52,4 +52,12 @@
     height: 130px;
     margin: 22px 9px 0;
     object-fit: contain;
+  }
+  .car-detail-link{
+    position: absolute;
+    top: 0; 
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
   }
